auto prefixer and fixed footre alignment

--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -1618,6 +1618,10 @@ footer {
         color: var(--primary);
     }
 
+    .footer-item a:nth-of-type(2) {
+        width: 100px;
+    }
+
     .footer-item:first-child {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -1628,6 +1632,17 @@ footer {
                 flex-direction: column;
         max-width: 300px;
     }
+
+    .footer-item:nth-child(2), .footer-item:nth-child(3) {
+        min-width: 170px !important;
+        max-width: 170px !important;
+    }
+
+    .footer-item:nth-of-type(4) {
+        margin-right: 40px;
+    }
+
+    
 
     .footer-location-info p {
         width: 180px !important;
